Testing index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             $("#main").glasses({
             	backGlass: 'img/bg.png',
             	frontGlass: 'img/bg2.png',
-            	borderColor: '#ff9900',
+            	borderColor: '#ff9900'
             });
         });
     </script>
